Fix erreur de contraste

--- a/assets/style.css
+++ b/assets/style.css
@@ -113,7 +113,7 @@ h2 {
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #fff;
+	color: #000;
 	background-color: #BEB45A;
 	border-radius:0 ;
 }
